# UBA-AED2

./: README.md
Clases/: funciones.cpp
Labo02/: CMakeLists.txt
Labo02/src/: Geometria.cpp  Juego.cpp  Libreta.cpp  Recordatorios.cpp
Labo02/tests/: test_geometria.cpp  test_juego.cpp  test_libreta.cpp
Labo03/src/: Fecha.cpp  Funciones.cpp  Meses.h  Periodo.cpp  Periodo.h
Labo03/tests/: ej_testing.cpp
Labo04/src/: Internet.h  Proxy.h  Proxy2.cpp  Proxy2.h  SistemaDeMensajes.cpp  SistemaDeMensajes.h
Labo05/src/: Lista.h  Lista.hpp
Laboratorio/Labo01/: CMakeLists.txt
Laboratorio/Labo02/: CMakeLists.txt
Laboratorio/Labo03/: CMakeLists.txt
Laboratorio/Labo04/: CMakeLists.txt
Laboratorio/Labo05/: CMakeLists.txt  Readme.txt
Laboratorio/Labo06/: CMakeLists.txt
Laboratorio/Labo06.2/: CMakeLists.txt
Laboratorio/Labo08/: CMakeLists.txt
Parciales/: 1er Parcial_(R.)_27-06-22.tad
Prácticas/Practica_3/: 01-ColaAcotada.tad  02-Polinomio.tad  03-Palindromo.tad
Prácticas/Práctica_1/: 01-SecuenciaExtendida.tad  02-ArbolBinarioExtendido.tad  03-ConjuntoExtendido.tad  04-Diccionario.tad  04-SecuenciaExtendida2.tad  05-ArbolTernarioExtendido.tad  05-SecuenciaExtendida2.tad  06-ArbolTernarioExtendido.tad  06-RosetreeExtendido.tad  07-Polinomio.tad  07-RosetreeExtendido.tad  08-Polinomio.tad  08-Robot.tad  09-Electroiman.tad  09-Robot.tad  10_A-FilaDeBanco.tad  10_B-FilaDeBanco.tad  10_C-FilaDeBanco.tad  11-Electroiman.tad  11-Stock.tad  12-JuegoDeLaOca.tad  12_A-FilaDeBanco.tad  12_B-FilaDeBanco.tad  12_C-FilaDeBanco.tad  13-Stock.tad  (+23 more)
TP/: TP.tad
TP1/: InterfazMapa.tad  InterfazServidor.tad  InterfazSimCity.tad
TP2/: CMakeLists.txt
TP2/src/: Mapa.cpp  Mapa.h  Servidor.cpp  Servidor.h  SimCity.cpp  SimCity.h  Tipos.h  aed2_Servidor.cpp  aed2_Servidor.h  string_map.hpp
TP2/tests/: servidor-tests.cpp
UsoDeClases/: Geometria.cpp  Recordatorio.cpp  Truco.cpp
(+68 files in other folders)
